<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gl.education.person.activity.MyWalletActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/home_tab_bg">

        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/white_back" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/mine_my_wallet_title"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <com.gl.education.widget.RoundImageView
            android:id="@+id/wallet_bar"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="@color/mine_wallet_bar"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:background="@drawable/wallet_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center">

                <TextView
                    android:id="@+id/wallet_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="0.00"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/wallet_num"
                    android:text="@string/mine_my_wallet_bi"
                    android:textColor="@color/mine_wallet_bi"
                    android:textSize="11dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_my_wallet_account"
                android:textColor="@color/mine_wallet_bi"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_recharge_center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:layout_marginTop="35dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/voucher_center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_my_wallet_voucher_center"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/mine_pointer"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_wallet_recharge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/recharge_record"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_my_wallet_recharge_record"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/mine_pointer"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_wallet_transaction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/transaction_record"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_my_wallet_transaction_record"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/mine_pointer"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
