<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gl.education.home.activity.SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/home_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/home_top"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/white_back"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_weight="5">

            <EditText
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/home_select_bg"
                android:gravity="center"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:hint="@string/main_search"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="16dp"
                android:text="@string/search_ss"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/search_hot_key"/>
            </RelativeLayout>


            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flowlayout"
                zhy:max_select="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
            </com.zhy.view.flowlayout.TagFlowLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/search_history"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>




</LinearLayout>
