<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="55dp"
    android:layout_marginRight="55dp"
    tools:context="com.gl.education.login.LoginInfoActivity">

    <ImageView
        android:id="@+id/login_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_banner"/>

    <LinearLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_banner"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/login_ic"/>
            <EditText
                android:id="@+id/edit_usename"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_hint_username"
                android:layout_marginLeft="10dp"
                android:textSize="11dp"
                android:maxLength="11"
                android:gravity="center_vertical"
                android:background="@null"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_username"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/login_ic2"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_hint_password"
                android:layout_marginLeft="10dp"
                android:textSize="11dp"
                android:gravity="center_vertical"
                android:background="@null"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:orientation="vertical"
        android:layout_marginTop="35dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_login">

            <TextView
                android:id="@+id/btn_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@color/transparent"
                android:text="@string/login_forget_password"
                android:textColor="@color/login_register"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@+id/btn_password"
                android:background="@color/transparent"
                android:text="@string/login_register"
                android:textColor="@color/login_register"
                android:textSize="12dp" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/login_btn"
            android:background="@color/transparent"/>



    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_login">

        <LinearLayout
            android:id="@+id/layout_other"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/btn_login_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/login_qq"/>

            <ImageView
                android:id="@+id/btn_login_wx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/login_wx"/>

            <ImageView
                android:id="@+id/btn_login_wb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/login_wb"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_other"
            android:layout_above="@+id/layout_other"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</RelativeLayout>
