<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gl.education.person.activity.EditUserNameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/home_tab_bg">

        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/white_back" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/edit_user_title"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_person_name"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textSize="16dp"
            android:maxEms="20"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:background="@null"
            android:paddingLeft="10dp"
            android:hint="@string/edit_person_name"
            android:textColor="@color/mine_person_typeface"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/transparent"/>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
           
           <ImageView
               android:id="@+id/edit_name_finish"
               android:layout_width="260dp"
               android:layout_height="28dp"
               android:background="@drawable/edit_name_finish"
               android:layout_centerInParent="true"/>
           
       </RelativeLayout>

    </LinearLayout>
</LinearLayout>
